# pyo3_reqwest_client_repro

./: .gitignore
pyo3_client_example-original/: Cargo.toml
pyo3_client_example-original/src/: lib.rs
pyo3_client_example/src/: lib.rs
pyo3_client_example/tests/: test_client.py
pyo3_client_example_async/: Cargo.toml
pyo3_client_example_async/src/: lib.rs
pyo3_client_example_async/tests/: conftest.py  test_client.py  test_client_local_server.py
pyo3_client_example_native_tls/: Cargo.toml
pyo3_client_example_native_tls/src/: lib.rs
pyo3_client_example_native_tls/tests/: test_client.py
pyo3_client_example_rustls_tls/: Cargo.toml
pyo3_client_example_rustls_tls/src/: lib.rs
pyo3_client_example_rustls_tls/tests/: test_client.py
pyo3_counter_example/: Cargo.toml
pyo3_counter_example/src/: lib.rs
pyo3_counter_example/tests/: test_increment.py
pyo3_file_handler_example/: Cargo.toml
pyo3_file_handler_example/src/: lib.rs
pyo3_file_handler_example/tests/: test_file_handling.py
pyo3_sleep_example/: Cargo.toml
pyo3_sleep_example/src/: lib.rs
pyo3_sleep_example/tests/: test_increment.py
