[package]
name = "pyo3_client_example_async"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
# Temporary fix by David Hewitt as pyo3-asyncio maintainer has given up
pyo3-asyncio-0-21 = { version = "0.21.0", features = ["attributes", "tokio-runtime"] }
reqwest = { version = "0.12.4" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
